--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -13,7 +13,11 @@
         <div style="display: flex; align-items: center; gap: 10px">
             {{ partial "svgs/logo.svg" (dict "height" 25 "width" 25 "class"
             "mode-sunny" "title" "LIGHT") . }}
-            <span style="font-weight: bold">Joshua MARTINELLE</span>
+            <a
+                href="/"
+                style="font-weight: bold; text-decoration: none; color: inherit"
+                >Joshua MARTINELLE</a
+            >
         </div>
 
         <div style="display: flex; align-items: center; margin-right: 2vh">
