--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -21,15 +21,29 @@
         </div>
 
         <div style="display: flex; align-items: center; margin-right: 2vh">
+            <a href="https://x.com/J0_mart" class="logo" style="display: block">
+                {{ partial "svgs/x.svg" (dict "height" 20 "width" 20 "class"
+                "mode-sunny" "title" "X") . }}
+            </a>
+            <span style="margin-left: 1vh; margin-right: 1vh">|</span>
             <a
                 href="https://github.com/JoshuaMART"
                 class="logo"
-                style="margin-right: 12px; display: block"
+                style="display: block"
             >
                 {{ partial "svgs/github.svg" (dict "height" 20 "width" 20
                 "class" "mode-sunny" "title" "GITHUB") . }}
             </a>
-
+            <span style="margin-left: 1vh; margin-right: 1vh">|</span>
+            <a
+                class="logo"
+                href="https://github.com/0xWithdrawers/"
+                style="display: block"
+            >
+                {{ partial "svgs/withrawers.svg" (dict "height" 20 "width" 20
+                "class" "mode-sunny" "title" "GITHUB") . }}
+            </a>
+            <span style="margin-left: 1vh; margin-right: 1vh">|</span>
             <a id="mode" href="#" style="display: block">
                 {{ partial "svgs/sun.svg" (dict "height" 20 "width" 20 "class"
                 "mode-sunny" "title" "LIGHT") . }} {{ partial "svgs/sun.svg"
