--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<div class="wrapper post" style="margin-top: -10vh">
+<div class="wrapper post" style="margin-top: -7%">
     <main class="page-content" aria-label="Content">
         <article>
             <header class="header">
