--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -52,5 +52,5 @@
       {{ partial "custom-head.html" . }}
     {{ end }}
 
-    <script defer src="https://stats.jomar.ovh/script.js" data-website-id="bee5be2d-eb24-42ff-bf4d-bf48fb3ef2d6"></script>
+    <script defer src="https://stats.mrtsec.xyz/script.js" data-website-id="1cd2e217-1ad7-45a6-805a-79efe7fea9fc"></script>
 </head>
