--- a/src/pages/tools.astro
+++ b/src/pages/tools.astro
@@ -17,6 +17,7 @@ const languageColors: Record<string, string> = {
   'C++': '#F34B7D',
   'Shell': '#89E051',
   'Java': '#B07219',
+  'PHP': '#777BB4',
 };
 ---
 
